--- a/dataeval-app/src/app/admin/manageuser/manageuser.component.html
+++ b/dataeval-app/src/app/admin/manageuser/manageuser.component.html
@@ -3,18 +3,37 @@
     <div class="sticky-top container-fluid rounded-top d-block  p-2 bg-secondary text-white">
         <h4 class="modal-title" id="modal-basic-title">Manage Patients</h4>
     </div>
-      <div class="container-fluid">
-        
-    <div class="modal-body ">
-        <form [formGroup]="searchForm"   (ngSubmit)="search()">
-            
-        <div class="row">
-            <div class="form-group col-4">
-                <label for="uName" class="font-weight-bold text-dark label-font" >Patient Name</label>
-                <input type="text" class="form-control" id="uName" placeholder="Enter Patient Name to Search"
-                    name="uName" formControlName="uName" required> 
-            </div> 
-            <!-- <div class="form-group col-4"> 
+    <div class="container-fluid">
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel-header class="font-weight-bold text-dark label-font">
+                <mat-panel-title>
+                    Search Patients
+                </mat-panel-title>
+                <mat-panel-description> 
+                </mat-panel-description>
+            </mat-expansion-panel-header> 
+            <div>
+                <form [formGroup]="searchForm" (ngSubmit)="search()"> 
+                    <div class="row">
+                        <div class="form-group col-4">
+                            <label for="uName" class="font-weight-bold text-secondary label-font">Patient First Name</label>
+                            <input type="text" class="form-control" id="fName"
+                                placeholder="Enter Patient Name to Search" name="fName" formControlName="fName"
+                                required>
+                        </div>
+                        <div class="form-group col-4">
+                            <label for="uName" class="font-weight-bold text-secondary label-font">Patient Last Name</label>
+                            <input type="text" class="form-control" id="lName"
+                                placeholder="Enter Patient Name to Search" name="lName" formControlName="lName"
+                                required>
+                        </div>
+                        <div class="form-group col-4">
+                            <label for="uName" class="font-weight-bold text-secondary label-font">Patient User Name</label>
+                            <input type="text" class="form-control" id="uName"
+                                placeholder="Enter Patient Name to Search" name="uName" formControlName="uName"
+                                required>
+                        </div>
+                        <!-- <div class="form-group col-4"> 
                 <label for="rName"  class="font-weight-bold text-dark label-font">User Type</label>
                 <select formControlName="rName"  class="form-control" value="">
                     <option value='' disabled selected="{{dataSource.query.roleId == '' ">Please select</option>
@@ -22,23 +41,26 @@
                     </option>
                 </select>
             </div> -->
-        </div>
-            
-       
-        <div style="  text-align: right; margin-right: 50px;">
-            <button type="submit" class="btn btn-secondary btn-sm" >Search</button> &nbsp;
-            <button type="button" class="btn btn-secondary btn-sm" (click)="resetSearch()" >Reset</button>&nbsp;
-            <button type="button" class="btn btn-secondary btn-sm" (click)="add()">Add Patient</button>
-        </div>
+                    </div>
 
-        </form>
-    </div> 
+
+                    <div style="  text-align: right; margin-right: 50px;">
+                        <button type="submit" class="btn btn-secondary btn-sm">Search</button> &nbsp;
+                        <button type="button" class="btn btn-secondary btn-sm"
+                            (click)="resetSearch()">Reset</button>&nbsp;
+                    </div>
+
+                </form>
+            </div>
+        </mat-expansion-panel>
     </div>
 
-    <hr/> 
-   
-    <div class="mat-elevation-z8">
+    <hr />
 
+    <div class="mat-elevation-z8">
+        <div style="  text-align: left; margin-left: 20px;">
+            <button type="button" class="btn btn-secondary btn-sm" (click)="add()">Add Patient</button>
+        </div>
         <mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
             <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -50,10 +72,10 @@
 
             <ng-container matColumnDef="userType">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> User Type</mat-header-cell>
-                <mat-cell *matCellDef="let row" > {{ row.role.name | titlecase}} 
+                <mat-cell *matCellDef="let row"> {{ row.role.name | titlecase}}
                 </mat-cell>
             </ng-container>
-            
+
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
@@ -61,8 +83,8 @@
                 <mat-cell *matCellDef="let row"> {{row.label}} </mat-cell>
             </ng-container>
 
-             <!-- First Name Column -->
-             <ng-container matColumnDef="firstname">
+            <!-- First Name Column -->
+            <ng-container matColumnDef="firstname">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> First Name </mat-header-cell>
                 <mat-cell *matCellDef="let row"> {{row.firstName}} </mat-cell>
             </ng-container>
@@ -84,11 +106,12 @@
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
                 <mat-cell *matCellDef="let row"> {{row.status}} </mat-cell>
             </ng-container>
- 
+
             <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                    <button   class="btn btn-secondary btn-sm" *ngIf="row.role.name !=  'admin' && row.role.name !=  'ADMIN'" (click)="edit(row.id)">
+                    <button class="btn btn-secondary btn-sm"
+                        *ngIf="row.role.name !=  'admin' && row.role.name !=  'ADMIN'" (click)="edit(row.id)">
                         Edit</button>
                 </mat-cell>
             </ng-container>
@@ -112,7 +135,7 @@
             </button>
         </div>
         <div class="modal-body">
-           
+
         </div>
 
     </ng-template>
@@ -126,7 +149,7 @@
             </button>
         </div>
         <div class="modal-body">
-           
+
         </div>
 
     </ng-template>
