--- a/dataeval-app/src/app/manage-patinetlog/view-patinetlog.component.html
+++ b/dataeval-app/src/app/manage-patinetlog/view-patinetlog.component.html
@@ -4,33 +4,61 @@
         <h4 class="modal-title" id="modal-basic-title">View Patient Call Log</h4>
     </div>
     <div class="container-fluid">
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+                <mat-panel-title class="font-weight-bold text-dark label-font">
+                    Search Patients Call Log
+                </mat-panel-title>
+                <mat-panel-description>
 
-        <div class="modal-body ">
-            <form [formGroup]="searchForm" (ngSubmit)="search()">
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+            <div>
+                <form [formGroup]="searchForm" (ngSubmit)="search()">
 
-                <div class="row" style="margin-top:-15px; margin-bottom: -15px; ">
+                    <br/>
+                    <div class="row" style="margin-top:-15px; margin-bottom: -15px; ">
 
-                    <div class="col-4">
-                        <div class="form-group">
-                            <label for="callType" class="font-weight-bold text-dark label-font">Call Type</label>
-                            <select class="form-control" formControlName="callType" id="callType">
-                                <option value="Patient Call">Patient Call</option>
-                                <option value="Pharmacy Calls">Pharmacy Calls</option>
-                                <option value="Referral Calls">Referral Calls</option>
-                                <option value="Personal Needs">Personal Needs</option>
-                                <option value="Community Needs">Community Needs</option>
-                            </select>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label for="callType" class="font-weight-bold text-secondary label-font">Call Type</label>
+                                <select class="form-control" formControlName="callType" id="callType">
+                                    <option value="Patient Call">Patient Call</option>
+                                    <option value="Pharmacy Calls">Pharmacy Calls</option>
+                                    <option value="Referral Calls">Referral Calls</option>
+                                    <option value="Personal Needs">Personal Needs</option>
+                                    <option value="Community Needs">Community Needs</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-4">  
-                        <div class="form-group">
-                            <label for="patientName" class="font-weight-bold text-dark label-font">Patient
-                                Name</label>
-                            <input type="text" class="form-control" id="patientName" placeholder="Enter Patient Name"
-                                name="patientName" formControlName="patientName" required>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label for="patientName" class="font-weight-bold text-secondary label-font">Patient
+                                   First  Name</label>
+                                <input type="text" class="form-control" id="fName"
+                                    placeholder="Enter Patient First Name" name="fName" formControlName="fName"
+                                    required>
+                            </div>
                         </div>
-                    </div>
-                    <!-- <div class="form-group col-4"> 
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label for="lName" class="font-weight-bold text-secondary label-font">Patient
+                                   Last Name</label>
+                                <input type="text" class="form-control" id="lName"
+                                    placeholder="Enter Patient Last Name" name="lName" formControlName="lName"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label for="patientName" class="font-weight-bold text-secondary label-font">Patient
+                                    Name</label>
+                                <input type="text" class="form-control" id="patientName"
+                                    placeholder="Enter Patient User Name" name="patientName" formControlName="patientName"
+                                    required>
+                            </div>
+                        </div>
+                        <!-- <div class="form-group col-4"> 
                 <label for="sname"  class="font-weight-bold text-dark label-font">Section</label>
                 <select formControlName="sname"  class="form-control" value="">
                     <option value='' disabled selected="{{dataSource.query.sectionId == '' ">Please select</option>
@@ -39,39 +67,41 @@
                 </select>
             </div> -->
 
-                </div>
+                    </div>
 
 
-                <div style="margin-top:-15px; margin-bottom: -15px;  text-align: right; margin-right: 50px;">
-                    <button type="submit" class="btn btn-secondary btn-sm">Search</button> &nbsp;
-                    <button type="button" class="btn btn-secondary btn-sm" (click)="resetSearch()">Reset</button> &nbsp; 
+                    <div style="margin-top:-15px; margin-bottom: -15px;  text-align: right; margin-right: 50px;">
+                        <button type="submit" class="btn btn-secondary btn-sm">Search</button> &nbsp;
+                        <button type="button" class="btn btn-secondary btn-sm" (click)="resetSearch()">Reset</button>
+                        &nbsp;
 
-                </div>
+                    </div>
 
-            </form>
-        </div>
+                </form>
+            </div>
+        </mat-expansion-panel>
     </div>
 
     <hr />
 
 
 
-    <div   style="min-height: 600px;">
+    <div style="min-height: 600px;">
 
-        <div class="example-container mat-elevation-z8 "  >
+        <div class="example-container mat-elevation-z8 ">
 
-            <mat-table #table [dataSource]="dataSource"  >
+            <mat-table #table [dataSource]="dataSource">
                 <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
-                <ng-container style="width: 10px;" matColumnDef="id" >
+                <ng-container style="width: 10px;" matColumnDef="id">
                     <mat-header-cell style="width: 10px;" *matHeaderCellDef> ID </mat-header-cell>
                     <mat-cell style="width: 10px;" *matCellDef="let row; let i = index"> {{i + (currentPageIndex) +1}}
                     </mat-cell>
                 </ng-container><!-- Progress Column -->
                 <ng-container matColumnDef="patientname">
-                    <mat-header-cell   *matHeaderCellDef>Patient Name</mat-header-cell>
-                    <mat-cell  *matCellDef="let row"> {{row.user.firstName}} {{row.user.lastName}}
+                    <mat-header-cell *matHeaderCellDef>Patient Name</mat-header-cell>
+                    <mat-cell *matCellDef="let row"> {{row.user.firstName}} {{row.user.lastName}}
                     </mat-cell>
                 </ng-container>
 
@@ -90,31 +120,34 @@
 
                 <ng-container matColumnDef="creationDate">
                     <mat-header-cell *matHeaderCellDef> Created Date </mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{row.creationDate | date:  "short":'UTC'}} </mat-cell>
+                    <mat-cell *matCellDef="let row"> {{row.creationDate | date: "short":'UTC'}} </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="remainingtime">
                     <mat-header-cell *matHeaderCellDef> Remaining Time (MM:SS) </mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{(row.remaingTime- row.remaingTime%60)/60  }} : {{row.remaingTime%60}} </mat-cell>
+                    <mat-cell *matCellDef="let row">{{(row.remaingTime- row.remaingTime%60)/60 }} :
+                        {{row.remaingTime%60}} </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="timeSpentInSession">
                     <mat-header-cell *matHeaderCellDef> Last Session Time (MM:SS) </mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{(row.timeSpentInSession- row.timeSpentInSession%60)/60  }} : {{row.timeSpentInSession%60}} </mat-cell>
+                    <mat-cell *matCellDef="let row"> {{(row.timeSpentInSession- row.timeSpentInSession%60)/60 }} :
+                        {{row.timeSpentInSession%60}} </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="totalTimeSpent">
                     <mat-header-cell *matHeaderCellDef> Time Spent in Month (MM:SS)</mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{(row.totalTimeSpent- row.totalTimeSpent%60)/60  }} : {{row.totalTimeSpent%60}}</mat-cell>
+                    <mat-cell *matCellDef="let row"> {{(row.totalTimeSpent- row.totalTimeSpent%60)/60 }} :
+                        {{row.totalTimeSpent%60}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
                     <mat-cell *matCellDef="let row">
-                        
-                     
-                        <button  class="btn btn-secondary btn-sm" (click)="viewcalllogrecord(row.user.id)">View</button>
-                       
+
+
+                        <button class="btn btn-secondary btn-sm" (click)="viewcalllogrecord(row.user.id)">View</button>
+
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -122,9 +155,9 @@
                 </mat-row>
 
             </mat-table>
-            <div   class="{{ count == 0 ? 'hideContent' : 'displyContent'}}">
-            <mat-paginator [pageSizeOptions]="[10, 25, 100]" (page)="onPaginateChange($event)" [pageSize]="10" >
-            </mat-paginator>
+            <div class="{{ count == 0 ? 'hideContent' : 'displyContent'}}">
+                <mat-paginator [pageSizeOptions]="[10, 25, 100]" (page)="onPaginateChange($event)" [pageSize]="10">
+                </mat-paginator>
             </div>
 
             <div style="height: 100px ; text-align: center; padding:250px ;" *ngIf="count === 0">No data found</div>
