--- a/dataeval-app/src/app/admin/manageuser/edit-user/edit-user.component.html
+++ b/dataeval-app/src/app/admin/manageuser/edit-user/edit-user.component.html
@@ -158,7 +158,7 @@
                                 <label for="altContact" class="font-weight-bold">Alternate Contact</label>
                                 <textarea type="text" class="form-control" id="altContact"
                                     placeholder="Enter Alternate Contact" name="altContact"
-                                    formControlName="alternateContact" required></textarea>
+                                    formControlName="alternateContact" ></textarea>
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                                     <label for="pharmacyName" class="font-weight-bold">Pharmacy Name</label>
                                     <input type="text" class="form-control" id="pharmacyName"
                                         placeholder="Enter Pharmacy Name" name="pharmacyName"
-                                        formControlName="pharmacyName" required>
+                                        formControlName="pharmacyName" >
                                 </div>
                             </div>
 
@@ -182,7 +182,7 @@
                                     <label for="phaddress" class="font-weight-bold">Address</label>
                                     <textarea type="text" class="form-control" id="phaddress"
                                         placeholder="Enter Address" name="phaddress" formControlName="address"
-                                        required> </textarea>
+                                        > </textarea>
                                 </div>
                             </div>
                         </div>
@@ -194,14 +194,14 @@
                                 <label for="pharmaPhone" class="font-weight-bold">Pharmacy Phone Number</label>
                                 <input type="text" class="form-control" id="pharmaPhone"
                                     placeholder="Enter Phone Number" name="pharmaPhone"
-                                    formControlName="pharmacyPhoneNumber" required>
+                                    formControlName="pharmacyPhoneNumber" >
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="pharmaFax" class="font-weight-bold">Fax Number</label>
                                 <input type="text" class="form-control" id="pharmaFax" placeholder="Enter Fax Number"
-                                    name="pharmaFax" formControlName="pharmacyFaxNumber" required>
+                                    name="pharmaFax" formControlName="pharmacyFaxNumber" >
                             </div>
                         </div>
                     </div>
