adding mandatory symbol on filed

--- a/dataeval-app/src/app/admin/manageuser/edit-user/edit-user.component.html
+++ b/dataeval-app/src/app/admin/manageuser/edit-user/edit-user.component.html
@@ -112,7 +112,8 @@
                        
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="insNumber" class="font-weight-bold">Insurance Number</label>
+                                <label for="insNumber" class="font-weight-bold">Insurance Number <span
+                                    class="required-asterisk">*</span> :</label>
                                 <input type="text" class="form-control" id="insNumber"
                                     placeholder="Enter Insurance Number" name="insNumber"
                                     formControlName="insuranceNumber" required>
@@ -120,7 +121,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="phNumber" class="font-weight-bold">Phone Number</label>
+                                <label for="phNumber" class="font-weight-bold">Phone Number <span
+                                    class="required-asterisk">*</span> :</label>
                                 <input type="text" class="form-control" id="phNumber" placeholder="Enter Phone Number"
                                     name="phNumber" formControlName="phoneNumber" required>
                             </div>
@@ -137,7 +139,8 @@
                         
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="mobNumber" class="font-weight-bold">Mobile Number</label>
+                                <label for="mobNumber" class="font-weight-bold">Mobile Number <span
+                                    class="required-asterisk">*</span> :</label> 
                                 <input type="text" class="form-control" id="mobNumber" placeholder="Enter Mobile Number"
                                     name="mobNumber" formControlName="mobileNumber" required>
                             </div>
